cambios en la cadena

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 
-DB_CNN_OLD=mongodb+srv://merce:merserita@cluster0.z0fha.mongodb.net/hospitaldb
-DB_CNN="mongodb+srv://merce:merserita@cluster0.z0fha.mongodb.net/hospitaldb?retryWrites=true&w=majority"
+
+DB_CNN=mongodb+srv://merce:merserita@cluster0.z0fha.mongodb.net/hospitaldb?retryWrites=true&w=majority
 JWT_SECRET=125ddd54987654y@rrrh65hfg
 GOOGLE_ID=1065412334202-e084klupb52rvih2ke95101ro68vhis8.apps.googleusercontent.com
 GOOGLE_SECRET=WHIzklzluvtf5KsC4FSJ7FIl
