--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "starter": "nodemon index.js",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,9 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "google-auth-library": "^7.0.4",
-    
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "nodemailer": "^6.6.0",
     "uuid": "^8.3.2"
   }
 }
